# mediawiki_rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.trunk/: trunk.yaml
src/: api.rs  api_sync.rs  entity_container.rs  entity_diff.rs  lib.rs  media_wiki_error.rs  page.rs  revision.rs  title.rs  user.rs
