[package]
name = "mediawiki"
description = "A MediaWiki client library"
keywords = ["MediaWiki","API"]
categories = ["api-bindings","authentication"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/magnusmanske/mediawiki_rust"
version = "0.2.10"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"

[dependencies]
serde_json = "^1"
tokio = { version = "^1", features = ["full","rt-multi-thread"] }
reqwest = { version = "^0.11", features = ["blocking", "cookies", "json"] }
futures = "^0.3"
urlencoding = "^2"
config = "^0.13"
nanoid = "^0.4"
url = "^2.2"
base64 = "^0.13"
hmac = "^0.12"
sha1 = "*"

[dev-dependencies]
lazy_static = "^1.4"
