[package]
name = "mediawiki"
description = "A MediaWiki client library"
keywords = ["MediaWiki", "API"]
categories = ["api-bindings", "authentication"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/magnusmanske/mediawiki_rust"
version = "0.3.3"
authors = ["Magnus Manske <magnusmanske@proton.me>"]
edition = "2024"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
#rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
#rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[dependencies]
chrono = "^0.4"
serde = "^1"
serde_json = "^1"
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "^0.13", features = [
  "blocking",
  "cookies",
  "json",
  "query",
  "form",
  "gzip"
], default-features = false }
futures = "^0.3"
urlencoding = "^2"
config = "^0.14"
nanoid = "^0.4"
url = "^2.5"
base64 = "^0.22"
hmac = "^0.12"
sha1 = "^0.10"
unicode-case-mapping = "^0.5"

[dev-dependencies]
lazy_static = "^1.4"
